--- a/index.html
+++ b/index.html
@@ -33,9 +33,19 @@
 
 </script>
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="favicon.ico">
         <title>chat with images!</title>
 
         <style>
+
+
+
+@font-face {
+font-family: 'Waltograph UI Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Waltograph UI Bold'), url('waltographUI.woff') format('woff');
+}
         * { font-family:tahoma; font-size:12px; padding:0px; margin:0px; }
         p { line-height:18px; }
         div { width:100%; margin-left:auto; margin-right:auto;}
@@ -44,8 +54,8 @@
                     */ }
         #input {  width: 96%; position: fixed; bottom: 0; left: 0; font-size: 3vw; }
         #image {               position: fixed; bottom: 0;          font-size: 3vw; right:0; }
-        #wenoweno{               position: fixed; bottom: 4vw;          font-size: 3vw; right:0; border: 2px black;}
-        #enviar{               position: fixed; bottom: 0vw;          font-size: 3vw; right:0; border: 2px black; background-color: #c9edf2;}
+        #wenoweno{ font-family:'Waltograph UI Bold';              position: fixed; bottom: 4vw;          font-size: 3vw; right:0; border: 2px black;}
+        #enviar{               position: fixed; bottom: 0vw;          font-size: 3.1vw; right:0; border: 2px black; /*background-color: #c9edf2;*/}
         #status { width:88px; display:block; float:left; }
         </style>
     </head>
