--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <script src="./jquery-ui.js"></script>
         <script src="./client.js"></script>
 <script>
+    async function favthis(element){
+    connection.send('/favthis '+element.innerHTML);
+}
+</script>
+<script>
     $(document).ready(function(){
         $('#image').bind('change', function(){
             var formData = new FormData($('#imgbb')[0]);
@@ -53,11 +58,12 @@ src: local('Waltograph UI Bold'), url('waltographUI.woff') format('woff');
         p { line-height:18px; }
         div { width:100%; margin-left:auto; margin-right:auto;}
         img {max-width: 400px;}
-        #content { background:#fff; margin-bottom: 3vw; /*overflow-y: scroll;
+        #content { background:#fff; margin-bottom: 3vw; overflow-anchor: none;/*overflow-y: scroll;
                     */ }
         #input {  width: 96%; position: fixed; bottom: 0; left: 0; font-size: 3vw; }
         #image {               position: fixed; bottom: 0;          font-size: 3vw; right:0; }
-        #upload{ font-family:'Waltograph UI Bold';              position: fixed; bottom: 4vw;          font-size: 3vw; right:0; border: 2px black;}
+        #upload{ font-family:'Waltograph UI Bold';              position: fixed; bottom: 4vw;          font-size: 3vw; right:4.5vw; border: 2px black;}
+        #heart{ position: fixed; bottom: 4vw; right:0; font-size:3vw; }
         #enviar{               position: fixed; bottom: 0vw;          font-size: 3.1vw; right:0; border: 2px black; /*background-color: #c9edf2;*/}
         #status { width:88px; display:block; float:left; }
         </style>
@@ -71,7 +77,7 @@ src: local('Waltograph UI Bold'), url('waltographUI.woff') format('woff');
             <input type="text" id="input" disabled="disabled" />
 <form id="imgbb" method="POST" url="https://api.imgbb.com/1/upload?key=f78e74601edcdc526eb41972404beeaa">
 <input type="file" id="image" value="SUBIR IMAGEN..." name="image" style="display: none;"/>
-<label for="image" id="upload">UPLOAD</label>
+<label for="image" id="upload">UPLOAD</label><label id="heart">💖</label></div>
 <label id="enviar">⏩</label>
 </form>
             </span>
