--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <script src="./jquery-ui.js"></script>
         <script src="./client.js"></script>
 <script>
-    async function favthis(element){
+    function favthis(element){
     connection.send('/favthis '+element.innerHTML);
-}
+    console.log(connection);
+    }
 </script>
 <script>
     $(document).ready(function(){
