--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ src: local('Waltograph UI Bold'), url('waltographUI.woff') format('woff');
         #image {               position: fixed; bottom: 0;          font-size: 3vw; right:0; }
         #upload{ font-family:'Waltograph UI Bold';              position: fixed; bottom: 4vw;          font-size: 3vw; right:4.5vw; border: 2px black;}
         #heart{ position: fixed; bottom: 4vw; right:0; font-size:3vw; }
+        #favs img{ width: 50px; height: 35px; }
         #enviar{               position: fixed; bottom: 0vw;          font-size: 3.1vw; right:0; border: 2px black; /*background-color: #c9edf2;*/}
         #status { width:88px; display:block; float:left; }
         </style>
